--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,35 +1,63 @@
-/* .cardList {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 16px;
-
-}
-.cardItem {
-	text-align: center;
-	padding: 10px;
-	border: 1px solid #646cff;
-	border-radius: 8px;
-	width: 200px;
-	height: 300px;
-	cursor: pointer;
-} */
-
-.cardList {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 40px;
-	justify-content: center;
-	margin-top: 50px;
+.movieList {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  list-style: none;
+  padding: 0;
 }
 
-.cardItem {
-	/* width: 200px; */
-	/* height: 400px; */
-	border: 1px solid #646cff;
-	border-radius: 8px;
-	padding: 4px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	text-align: center;
+.movieItem {
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: var(--shadow);
+  transition: transform 0.3s ease;
+  background-color: var(--white);
+}
+
+.movieItem:hover {
+  transform: translateY(-5px);
+}
+
+.movieLink {
+  display: block;
+  height: 100%;
+}
+
+.moviePoster {
+  height: 300px;
+  overflow: hidden;
+}
+
+.posterImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.noPoster {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-gray);
+  color: var(--text-color);
+}
+
+.movieInfo {
+  padding: 12px;
+}
+
+.movieTitle {
+  font-size: 1rem;
+  margin-bottom: 4px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.movieYear {
+  font-size: 0.9rem;
+  color: #666;
+  margin: 0;
 }
