--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,16 @@
+.container {
+  padding: 20px 0;
+}
+
 .title {
-	text-align: center;
-	margin-bottom: 40px;
-	padding-top: 40px;
-	text-transform: uppercase;
+  margin-bottom: 24px;
+  color: var(--primary-color);
+}
+
+.error {
+  color: red;
+  padding: 16px;
+  background-color: rgba(255, 0, 0, 0.1);
+  border-radius: 4px;
+  margin-bottom: 20px;
 }
