--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,8 +1,9 @@
 .container {
-  padding: 20px 0;
+  padding: 20px;
 }
 
 .title {
+  text-align: center;
   margin-bottom: 24px;
   color: var(--primary-color);
 }
